[gd_scene load_steps=24 format=3 uid="uid://4a33w8jd0tmg"]

[ext_resource type="Texture2D" uid="uid://dxdwcc07kt2q3" path="res://assets/visuals/w11wallpaper.jpg" id="1_4j8fu"]
[ext_resource type="Script" uid="uid://bnhmru8blddne" path="res://Scripts/desktop_wallpaper.gd" id="2_djnmm"]
[ext_resource type="Script" uid="uid://cl0xvgtuumseb" path="res://Scripts/desktop_select.gd" id="3_pfbb1"]
[ext_resource type="PackedScene" uid="uid://dk16qhj3ykph2" path="res://Scenes/ContextMenu/context_menu.tscn" id="4_wg1g7"]
[ext_resource type="Script" uid="uid://gcdai4gkb41h" path="res://Scripts/taskbar.gd" id="5_qpnbv"]
[ext_resource type="PackedScene" uid="uid://e2trfnt3f67m" path="res://Scenes/taskbar_button.tscn" id="6_b55dp"]
[ext_resource type="Texture2D" uid="uid://c2op4jrngcgc2" path="res://assets/visuals/start-button.png" id="7_ad33h"]
[ext_resource type="Texture2D" uid="uid://c8np16206qjlw" path="res://assets/visuals/search.svg" id="8_inoge"]
[ext_resource type="Script" uid="uid://csmpkjf8glief" path="res://Scripts/search.gd" id="9_n3uxm"]
[ext_resource type="PackedScene" uid="uid://fowymqxvc5gq" path="res://Scenes/search_area.tscn" id="10_ix27p"]
[ext_resource type="Script" uid="uid://cal44pm13ulx8" path="res://Scripts/File/taskbar_button_files.gd" id="11_4j8fu"]
[ext_resource type="Texture2D" uid="uid://pgyu161absk4" path="res://assets/visuals/file_explorer_icon.png" id="11_cq71g"]
[ext_resource type="Script" uid="uid://dfjqhnollgwy4" path="res://Scripts/date_time.gd" id="12_scol6"]
[ext_resource type="PackedScene" uid="uid://dlkaebh8nai8u" path="res://Scenes/icon.tscn" id="14_pvnqr"]
[ext_resource type="Script" uid="uid://dl81oaq38sjxv" path="res://Scripts/File/myfiles.gd" id="15_1djlj"]
[ext_resource type="Texture2D" uid="uid://b3vssf3on3ube" path="res://assets/visuals/icon_spotify_64x64.png" id="16_ojlgc"]
[ext_resource type="PackedScene" uid="uid://rivmbmqxn413" path="res://Scenes/File_Window/file_window_improve.tscn" id="17_4j8fu"]
[ext_resource type="PackedScene" uid="uid://bqdej8g1xcycc" path="res://Scenes/File_Window/bounce.tscn" id="18_4j8fu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
bg_color = Color(0.909804, 0.921569, 0.945098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.758192, 0.758192, 0.758191, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h2yge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
bg_color = Color(0.917647, 0.92549, 0.94902, 0)
border_color = Color(0.8, 0.8, 0.8, 0)
border_blend = true

[sub_resource type="LabelSettings" id="LabelSettings_h2yge"]
line_spacing = 0.0
font_size = 10
font_color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(63, 45)

[node name="Desktop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DesktopWallpaper" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4j8fu")
expand_mode = 2
stretch_mode = 6
script = ExtResource("2_djnmm")

[node name="DesktopSelect" type="Control" parent="DesktopWallpaper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_pfbb1")

[node name="ContextMenu" parent="DesktopWallpaper" instance=ExtResource("4_wg1g7")]
layout_mode = 0
offset_right = 300.0
context_menu_type = 1

[node name="sound" type="AudioStreamPlayer2D" parent="DesktopWallpaper"]

[node name="Taskbar" type="Control" parent="."]
custom_minimum_size = Vector2(0, 45)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("5_qpnbv")

[node name="ContextMenu" parent="Taskbar" instance=ExtResource("4_wg1g7")]
layout_mode = 0
offset_right = 300.0
offset_bottom = 47.0
context_menu_type = 2

[node name="ColorTaskbar" type="ColorRect" parent="Taskbar"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
color = Color(0.85098, 0.870588, 0.917647, 1)

[node name="TaskbarCenter" type="HBoxContainer" parent="Taskbar"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Start" parent="Taskbar/TaskbarCenter" instance=ExtResource("6_b55dp")]
layout_mode = 2
icon = ExtResource("7_ad33h")
icon_size = 22.0

[node name="PanelContainer" type="PanelContainer" parent="Taskbar/TaskbarCenter"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h2yge")

[node name="HBoxContainer" type="HBoxContainer" parent="Taskbar/TaskbarCenter/PanelContainer"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="MarginLeft" type="MarginContainer" parent="Taskbar/TaskbarCenter/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="Search" type="TextureRect" parent="Taskbar/TaskbarCenter/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
texture = ExtResource("8_inoge")
expand_mode = 1
stretch_mode = 4
script = ExtResource("9_n3uxm")

[node name="SearchArea" parent="Taskbar/TaskbarCenter/PanelContainer/HBoxContainer/Search" instance=ExtResource("10_ix27p")]

[node name="LineEdit" type="LineEdit" parent="Taskbar/TaskbarCenter/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(170, 30)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/selection_color = Color(0, 0.509804, 1, 1)
theme_override_colors/caret_color = Color(0.0923971, 0.0923971, 0.0923971, 1)
theme_override_colors/font_placeholder_color = Color(0.340339, 0.340339, 0.340339, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/font_selected_color = Color(0.901961, 0.92549, 0.94902, 1)
theme_override_colors/font_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
theme_override_constants/caret_width = 1
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_h2yge")
theme_override_styles/normal = SubResource("StyleBoxFlat_0xm2m")
placeholder_text = "Search"

[node name="MarginRight" type="MarginContainer" parent="Taskbar/TaskbarCenter/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="FileExplorer" parent="Taskbar/TaskbarCenter" instance=ExtResource("6_b55dp")]
layout_mode = 2
script = ExtResource("11_4j8fu")
icon = ExtResource("11_cq71g")

[node name="Godot" parent="Taskbar/TaskbarCenter" instance=ExtResource("6_b55dp")]
layout_mode = 2

[node name="TaskbarRight" type="HBoxContainer" parent="Taskbar"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -22.5
offset_bottom = 22.5
grow_horizontal = 0
grow_vertical = 2
alignment = 2

[node name="DateTime" type="Label" parent="Taskbar/TaskbarRight"]
layout_mode = 2
size_flags_horizontal = 8
text = "%.%.%"
label_settings = SubResource("LabelSettings_h2yge")
horizontal_alignment = 2
script = ExtResource("12_scol6")

[node name="Area2D" type="Area2D" parent="Taskbar/TaskbarRight/DateTime"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Taskbar/TaskbarRight/DateTime/Area2D"]
position = Vector2(14.5, 7.5)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="MarginContainer" type="MarginContainer" parent="Taskbar/TaskbarRight"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Spotify" parent="." instance=ExtResource("14_pvnqr")]
position = Vector2(57, 157)
icon = ExtResource("16_ojlgc")
title = "My Music"

[node name="Files" parent="." instance=ExtResource("14_pvnqr")]
position = Vector2(168, 158)
script = ExtResource("15_1djlj")
icon = ExtResource("11_cq71g")
title = "My Files"

[node name="file_window" parent="Files" instance=ExtResource("17_4j8fu")]

[node name="bounce" parent="Files" instance=ExtResource("18_4j8fu")]
position = Vector2(-1768, 103)

[connection signal="body_entered" from="Taskbar/TaskbarCenter/PanelContainer/HBoxContainer/Search/SearchArea" to="Taskbar/TaskbarCenter/PanelContainer/HBoxContainer/Search/SearchArea" method="_on_body_entered"]
[connection signal="body_exited" from="Taskbar/TaskbarCenter/PanelContainer/HBoxContainer/Search/SearchArea" to="Taskbar/TaskbarCenter/PanelContainer/HBoxContainer/Search/SearchArea" method="_on_body_exited"]
[connection signal="bird_up" from="Files/file_window" to="DesktopWallpaper" method="_on_file_window_bird_up"]
[connection signal="change_wallpaper" from="Files/file_window" to="DesktopWallpaper" method="_on_file_window_change_wallpaper"]
